update setting coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -18,5 +18,6 @@ exclude_lines =
     pragma: no cover
     def __repr__
     raise AssertionError
+    raise ValidationError
     raise NotImplementedError
     if __name__ == .__main__.:
