--- a/requirements.in
+++ b/requirements.in
@@ -16,6 +16,7 @@ https://control.divio.com/api/v1/apps/serve/django-filer/2.0.2/437dbe66-4a2c-402
 # </INSTALLED_ADDONS>
 
 # django-shop
+django-treebeard==4.4 # fix tree bug
 django-shop==1.2.3
 django-filter==2.2.0
 django-ipware==3.0.1
