--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.5.12",
     "@vue-stripe/vue-stripe": "^4.1.8",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
+    "vue-choropleth": "^0.3.1",
     "vue-i18n": "^8.22.1",
     "vue-router": "^3.2.0",
+    "vue2-leaflet": "^2.5.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
     "vuex-persist": "^2.2.0"
