--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_script: pip install docker-compose
 script:
   - docker-compose -f docker-compose-test.yml up db &
   - sleep 5
+  - docker-compose -f docker-compose-test.yml run --rm web python manage.py migrate
   - docker-compose -f docker-compose-test.yml run --rm web python manage.py test && flake8
