--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - docker-compose -f docker-compose-test.yml up db &
   - sleep 5
   - docker-compose -f docker-compose-test.yml run --rm web python manage.py migrate
-  - docker-compose -f docker-compose-test.yml run --rm web python manage.py test && flake8
+  - docker-compose -f docker-compose-test.yml run --rm web python manage.py test dshop.tests.test_model && flake8 --exclude migrations
